--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1"
     />
-    <meta name="googlebot" content="noindex" />
-    <meta name="robots" content="noindex, nofollow" />
+
     <link rel="stylesheet" href="./assets/styles/aos.css" />
     <link rel="stylesheet" href="./assets/styles/output.css" />
     <title>
@@ -162,7 +161,7 @@
           <img
             src="./assets/images/home/hero.jpg"
             alt="hero"
-            class="absolute top-0 left-0 w-full h-full object-cover flipped"
+            class="absolute top-0 left-0 w-full h-full object-cover flipped tilt-container"
           />
           <div
             class="relative heroBox bg-[#FFF] lg:w-[32.8645833333vw] border12 lg:py-[3.125vw] sm:py-[6vw] py-[10vw]"
@@ -427,6 +426,141 @@
               class="lg:w-[46.875vw] relative pb-[180px] sm:pb-[40vw] lg:pb-0 lg:h-[43.0729166667vw] flex items-start rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
             >
               <div
+                class="w-full transform scale-x-[-1] h-[68%] sm:h-full absolute bottom-[15px] sm:bottom-[1vw] lg:bottom-[0.72916666666vw] left-0"
+              >
+                <img
+                  src="./assets/images/home/frame207.png"
+                  alt="frame"
+                  class="w-full h-full object-cover"
+                />
+              </div>
+              <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
+                <div
+                  class="sm:max-w-[66vw] lg:ml-[8.33333333333vw] lg:max-w-[31.0416666667vw]"
+                >
+                  <h5
+                    data-aos="fade-up"
+                    class="text50 mb-[16px] sm:mb-[1.5625vw]"
+                  >
+                    Share large files fast
+                  </h5>
+                  <p data-aos="fade-down" class="text22">
+                    Quickly move documents, photos, videos, and other large
+                    files, at the touch of a button. With a generous storage of
+                    3TB and max file size of 50GB, send even your largest files.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="w-full h-[300px] sm:h-[63vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
+            >
+              <div
+                data-aos="fade"
+                data-aos-delay="600"
+                class="featuresCard absolute bottom-[7.34375vw] right-[18.5416666667vw] lg:w-[25.9375vw]"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/share.png"
+                  alt="password screenshot"
+                />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="700"
+                class="absolute bottom-[12vw] lg:bottom-[9vw] right-[-4vw] lg:right-[6vw] w-[35vw] lg:w-[18vw]"
+              >
+                <img src="/assets/images/home/share2.png" class="w-full" />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="800"
+                class="absolute w-[52vw] top-[2vw] lg:w-[33.125vw] lg:top-[5.10416666667vw] right-[1vw] featuresCard"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/share3.png"
+                  alt="files screenshot"
+                />
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col-reverse lg:flex-row gap-y-[30px]"
+          >
+            <div
+              class="w-full h-[480px] sm:h-[95vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
+            >
+              <div
+                data-aos="fade"
+                data-aos-delay="600"
+                class="featuresCard w-[57%] left-[10%] sm:left-[18%] sm:left-[20vw] sm:w-[40vw] lg:w-[20.1041666667vw] absolute left-[20vw] lg:left-[3.07291666667vw] bottom-[1vw]"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/grained1.png"
+                  alt="password screenshot"
+                />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="800"
+                class="w-[250px] right-[-21px] sm:right-0 lg:right-[2vw] bottom-[50px] sm:bottom-[9vw] lg:bottom-[5.5vw] sm:w-[40vw] lg:w-[18.375vw] absolute"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/grained2.png"
+                  alt="files screenshot"
+                />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="400"
+                class="featuresCard w-[90%] sm:w-[70vw] left-[5vw] lg:w-[30.9895833333vw] top-[2.39583333333vw] lg:left-[9.01041666667vw] absolute"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/grained3.png"
+                  alt="device screenshot"
+                />
+              </div>
+            </div>
+            <div
+              class="lg:w-[46.875vw] relative pt-[180px] sm:pt-[40vw] lg:pt-0 lg:h-[43.0729166667vw] flex items-end rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
+            >
+              <div
+                class="w-full h-[68%] sm:h-full absolute top-[15px] sm:top-[1vw] lg:top-[0.72916666666vw] left-0"
+              >
+                <img
+                  src="./assets/images/home/frame206.png"
+                  alt="frame"
+                  class="w-full h-full object-cover"
+                />
+              </div>
+              <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
+                <div class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw]">
+                  <h5
+                    data-aos="fade-up"
+                    class="text50 mb-[16px] sm:mb-[1.5625vw]"
+                  >
+                    Fine grained access control
+                  </h5>
+                  <p data-aos="fade-down" class="text22">
+                    Easily control which team members, devices, and
+                    geo-locations have access to your files.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col lg:flex-row gap-y-[30px]"
+          >
+            <div
+              class="lg:w-[46.875vw] relative pb-[180px] sm:pb-[40vw] lg:pb-0 lg:h-[43.0729166667vw] flex items-start rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
+            >
+              <div
                 class="w-full h-[68%] sm:h-full absolute bottom-[15px] sm:bottom-[1vw] lg:bottom-[0.72916666666vw] left-0"
               >
                 <img
@@ -455,7 +589,7 @@
             >
               <div
                 data-aos="fade"
-                data-aos-delay="600"
+                data-aos-delay="800"
                 class="featuresCard w-[70vw] lg:w-[31.4583333333vw] top-[13.3333333333vw] right-[8.33333333333vw] absolute"
               >
                 <img
@@ -465,13 +599,15 @@
                 />
               </div>
               <div
+                data-aos="fade"
+                data-aos-delay="700"
                 class="absolute w-[25vw] right-[-2vw] top-[6vw] lg:w-[15vw] lg:right-0 lg:top-[13vw]"
               >
                 <img src="/assets/images/home/analytics2.png" class="w-full" />
               </div>
               <div
                 data-aos="fade"
-                data-aos-delay="800"
+                data-aos-delay="600"
                 class="featuresCard absolute w-[60vw] lg:w-[33.6458333333vw] left-[-2vw] top-[1vw] lg:top-[6.5vw]"
               >
                 <img
@@ -530,9 +666,10 @@
     </main>
     <footer class="bg-[#18181B]">
       <div
-        class="flex-wrap gap-x-[2vw] sm:gap-y-[2vw] gap-y-[4vw] container1720 flex justify-between items-center lg:py-[2vw] sm:py-[4vw] py-[8vw]"
+        class="flex-wrap gap-x-[2vw] sm:gap-y-[2vw] gap-y-[4vw] container1720 flex justify-between items-center flex-col-reverse sm:flex-row lg:py-[2vw] sm:py-[4vw] pt-[6vw] pb-[4vw]"
       >
-        <span class="text16 text-[#9FA6B2]"
+        <span
+          class="lg:text-[0.83333333333vw] lg:leading-[0.88541666666vw] sm:text-[2.08333333333vw] sm:leading-[2.21354166667vw] text-[14px] text-[#9FA6B2]"
           >© 2023 Grandtransfer. All rights reserved.</span
         >
         <ul
@@ -576,13 +713,33 @@
           </li>
         </ul>
         <div
-          class="text-[#F4F5F7] flex items-center lg:gap-x-[1.40625vw] sm:gap-x-[3vw] gap-x-[6vw] capitalize text18"
+          class="text-[#F4F5F7] flex items-center lg:gap-x-[1.40625vw] sm:gap-x-[3vw] gap-x-[6vw] capitalize lg:text-[0.9375vw] lg:leading-[1.45833333333vw] sm:text-[2.34375vw] sm:leading-[3.64583333333vw] text-[14px]"
         >
           <a href="/terms-and-conditions.html">terms & conditions</a>
           <a href="/privacy-policy.html">privacy policy</a>
         </div>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.0.3/tilt.jquery.min.js"
+      integrity="sha512-14AZ/DxUrlF26z6v7egDkpJHKyJRn/7ue2BgpWZ/fmqrqVzf4PrQnToy99sHmKwzKev/VZ1tjPxusuTV/n8CcQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script>
+      //   $(document).ready(function () {
+      //     $(".tilt-container").tilt({
+      //       maxTilt: 20,
+      //       speed: 400,
+      //       glare: true,
+      //       scale: 1.1,
+      //     });
+      //   });
+      //
+    </script>
+
     <script src="./assets/javascripts/aos.min.js"></script>
     <script src="./assets/javascripts/global.js"></script>
   </body>
