--- a/pricing.html
+++ b/pricing.html
@@ -7,8 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1"
     />
-    <meta name="googlebot" content="noindex" />
-    <meta name="robots" content="noindex, nofollow" />
+
     <link rel="stylesheet" href="./assets/styles/aos.css" />
     <link rel="stylesheet" href="./assets/styles/output.css" />
     <title>
@@ -201,10 +200,10 @@
               >
                 <div
                   data-aos="fade"
-                  class="mx-auto lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
+                  class="mx-auto priceCard lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
                 >
                   <div
-                    class="text22 text-[#FFFFFF] bg-[#992861] border12 transform rotate-[-90deg] absolute recommend__Fixer"
+                    class="text22 text-[#FFFFFF] bg-[#992861] border12recomended transform rotate-[-90deg] absolute recommend__Fixer"
                   >
                     <span> Recommended </span>
                   </div>
@@ -212,7 +211,7 @@
                     class="lg:pb-[1.92708333333vw] sm:pb-[2vw] pb-[2vw] mx-[auto] sm:w-[89%] lg:w-[75.50%] w-[80%] text-[#18181B] flex flex-col items-start"
                   >
                     <div
-                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] h-[48.7179487179vw]"
+                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] mb-[12vw] sm:mb-0"
                     >
                       <h4 class="text45">Free</h4>
                       <p
@@ -312,10 +311,10 @@
                 <div
                   data-aos="fade"
                   data-aos-delay="150"
-                  class="mx-auto lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
+                  class="mx-auto priceCard lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
                 >
                   <div
-                    class="text22 text-[#FFFFFF] bg-[#992861] border12 transform rotate-[-90deg] absolute recommend__Fixer"
+                    class="text22 text-[#FFFFFF] bg-[#992861] border12recomended transform rotate-[-90deg] absolute recommend__Fixer"
                   >
                     <span> Recommended </span>
                   </div>
@@ -323,7 +322,7 @@
                     class="lg:pb-[1.92708333333vw] sm:pb-[2vw] pb-[2vw] mx-[auto] sm:w-[89%] lg:w-[75.50%] w-[80%] text-[#18181B] flex flex-col items-start"
                   >
                     <div
-                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] h-[48.7179487179vw]"
+                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] mb-[12vw] sm:mb-0"
                     >
                       <h4 class="text45">Plus</h4>
                       <div
@@ -338,7 +337,7 @@
                         >
                       </div>
                       <p
-                        class="text20 lg:leading-[1.5625vw] lg:mt-[0.52083333333vw] mt1"
+                        class="text20 durationTag lg:leading-[1.5625vw] lg:mt-[0.52083333333vw] mt1"
                       >
                         Per month
                       </p>
@@ -434,11 +433,11 @@
                 <div
                   data-aos="fade"
                   data-aos-delay="300"
-                  class="rec mx-auto lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
+                  class="rec priceCard mx-auto lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
                 >
                   <div>
                     <div
-                      class="text22 text-[#FFFFFF] bg-[#992861] border12 transform rotate-[-90deg] absolute recommend__Fixer"
+                      class="text22 text-[#FFFFFF] bg-[#992861] border12recomended transform rotate-[-90deg] absolute recommend__Fixer"
                     >
                       <span> Recommended </span>
                     </div>
@@ -447,7 +446,7 @@
                     class="lg:pb-[1.92708333333vw] sm:pb-[2vw] pb-[2vw] mx-[auto] sm:w-[89%] lg:w-[75.50%] w-[80%] text-[#18181B] flex flex-col items-start"
                   >
                     <div
-                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] h-[48.7179487179vw]"
+                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] mb-[12vw] sm:mb-0"
                     >
                       <h4 class="text45">Pro</h4>
                       <div
@@ -462,7 +461,7 @@
                         >
                       </div>
                       <p
-                        class="text20 lg:leading-[1.5625vw] lg:mt-[0.52083333333vw] mt1"
+                        class="text20 durationTag lg:leading-[1.5625vw] lg:mt-[0.52083333333vw] mt1"
                       >
                         Per month
                       </p>
@@ -558,10 +557,10 @@
                 <div
                   data-aos="fade"
                   data-aos-delay="450"
-                  class="mx-auto lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
+                  class="mx-auto priceCard lg:w-[21.25vw] sm:w-[80%] w-full lg:py-[3.125vw] sm:py-[6vw] py-[10vw] border12 bg-[#F4F5F7] relative overflow-hidden"
                 >
                   <div
-                    class="text22 text-[#FFFFFF] bg-[#992861] border12 transform rotate-[-90deg] absolute recommend__Fixer"
+                    class="text22 text-[#FFFFFF] bg-[#992861] border12recomended transform rotate-[-90deg] absolute recommend__Fixer"
                   >
                     <span> Recommended </span>
                   </div>
@@ -569,7 +568,7 @@
                     class="lg:pb-[1.92708333333vw] sm:pb-[2vw] pb-[2vw] mx-[auto] sm:w-[89%] lg:w-[75.50%] w-[80%] text-[#18181B] flex flex-col items-start"
                   >
                     <div
-                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] h-[48.7179487179vw]"
+                      class="lg:h-[11.09375vw] sm:h-[28.6458333333vw] mb-[12vw] sm:mb-0"
                     >
                       <h4 class="text45">Max</h4>
                       <div
@@ -584,7 +583,7 @@
                         >
                       </div>
                       <p
-                        class="text20 lg:leading-[1.5625vw] lg:mt-[0.52083333333vw] mt1"
+                        class="text20 durationTag lg:leading-[1.5625vw] lg:mt-[0.52083333333vw] mt1"
                       >
                         Per month
                       </p>
@@ -1010,9 +1009,10 @@
     </main>
     <footer class="bg-[#18181B]">
       <div
-        class="flex-wrap gap-x-[2vw] sm:gap-y-[2vw] gap-y-[4vw] container1720 flex justify-between items-center lg:py-[2vw] sm:py-[4vw] py-[8vw]"
+        class="flex-wrap gap-x-[2vw] sm:gap-y-[2vw] gap-y-[4vw] container1720 flex justify-between items-center flex-col-reverse sm:flex-row lg:py-[2vw] sm:py-[4vw] pt-[6vw] pb-[4vw]"
       >
-        <span class="text16 text-[#9FA6B2]"
+        <span
+          class="lg:text-[0.83333333333vw] lg:leading-[0.88541666666vw] sm:text-[2.08333333333vw] sm:leading-[2.21354166667vw] text-[14px] text-[#9FA6B2]"
           >© 2023 Grandtransfer. All rights reserved.</span
         >
         <ul
@@ -1056,7 +1056,7 @@
           </li>
         </ul>
         <div
-          class="text-[#F4F5F7] flex items-center lg:gap-x-[1.40625vw] sm:gap-x-[3vw] gap-x-[6vw] capitalize text18"
+          class="text-[#F4F5F7] flex items-center lg:gap-x-[1.40625vw] sm:gap-x-[3vw] gap-x-[6vw] capitalize lg:text-[0.9375vw] lg:leading-[1.45833333333vw] sm:text-[2.34375vw] sm:leading-[3.64583333333vw] text-[14px]"
         >
           <a href="/terms-and-conditions.html">terms & conditions</a>
           <a href="/privacy-policy.html">privacy policy</a>
