--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -7,8 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1"
     />
-    <meta name="googlebot" content="noindex" />
-    <meta name="robots" content="noindex, nofollow" />
+
     <link rel="stylesheet" href="./assets/styles/aos.css" />
     <link rel="stylesheet" href="./assets/styles/output.css" />
     <title>Terms & Conditions - User Agreement | GrandTransfer</title>
@@ -270,9 +269,10 @@
     </main>
     <footer class="bg-[#18181B]">
       <div
-        class="flex-wrap gap-x-[2vw] sm:gap-y-[2vw] gap-y-[4vw] container1720 flex justify-between items-center lg:py-[2vw] sm:py-[4vw] py-[8vw]"
+        class="flex-wrap gap-x-[2vw] sm:gap-y-[2vw] gap-y-[4vw] container1720 flex justify-between items-center flex-col-reverse sm:flex-row lg:py-[2vw] sm:py-[4vw] pt-[6vw] pb-[4vw]"
       >
-        <span class="text16 text-[#9FA6B2]"
+        <span
+          class="lg:text-[0.83333333333vw] lg:leading-[0.88541666666vw] sm:text-[2.08333333333vw] sm:leading-[2.21354166667vw] text-[14px] text-[#9FA6B2]"
           >© 2023 Grandtransfer. All rights reserved.</span
         >
         <ul
@@ -316,7 +316,7 @@
           </li>
         </ul>
         <div
-          class="text-[#F4F5F7] flex items-center lg:gap-x-[1.40625vw] sm:gap-x-[3vw] gap-x-[6vw] capitalize text18"
+          class="text-[#F4F5F7] flex items-center lg:gap-x-[1.40625vw] sm:gap-x-[3vw] gap-x-[6vw] capitalize lg:text-[0.9375vw] lg:leading-[1.45833333333vw] sm:text-[2.34375vw] sm:leading-[3.64583333333vw] text-[14px]"
         >
           <a href="/terms-and-conditions.html">terms & conditions</a>
           <a href="/privacy-policy.html">privacy policy</a>
